--- a/client/homepage.glade
+++ b/client/homepage.glade
@@ -1,25 +1,18 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkWindow" id="window">
-    <property name="can-focus">False</property>
+    <property name="default-width">800</property>
+    <property name="default-height">600</property>
     <child>
-      <object class="GtkLayout">
-        <property name="visible">True</property>
-        <property name="can-focus">False</property>
+      <object class="GtkAlignment">
+        <property name="xalign">0.5</property>
+        <property name="yalign">0.5</property>
         <child>
-          <object class="GtkImage" id="background-image">
-            <property name="width-request">100</property>
-            <property name="height-request">80</property>
+          <object class="GtkImage" id="background_image">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <property name="pixbuf">background-img.png</property>
           </object>
-          <packing>
-            <property name="x">0</property>
-            <property name="y">0</property>
-          </packing>
         </child>
       </object>
     </child>
