--- a/client/homepage.glade
+++ b/client/homepage.glade
@@ -1,17 +1,22 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with Glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkWindow" id="window">
+    <property name="can-focus">False</property>
     <property name="default-width">800</property>
     <property name="default-height">600</property>
+    <property name="resizable">False</property>
     <child>
-      <object class="GtkAlignment">
-        <property name="xalign">0.5</property>
-        <property name="yalign">0.5</property>
+      <object class="GtkFixed" id="fixed">
+        <property name="visible">True</property>
         <child>
-          <object class="GtkImage" id="background_image">
+          <object class="GtkImage" id="image">
             <property name="visible">True</property>
-            <property name="can-focus">False</property>
             <property name="pixbuf">background-img.png</property>
+            <property name="can-focus">False</property>
+            <property name="width-request">800</property> <!-- Fixed width of 800px -->
+            <property name="height-request">600</property> <!-- Set this to match your window height -->
           </object>
         </child>
       </object>
