--- a/client/style.css
+++ b/client/style.css
@@ -81,6 +81,10 @@ button > label {
     padding: 10px;
 }
 
+#spinner {
+    color: white;
+}
+
 #question-label {
     background: radial-gradient(circle, #4A90E2 40%, #003366 100%);
     padding: 10px;
