tao 2 loai dialog

--- a/client/style.css
+++ b/client/style.css
@@ -173,3 +173,8 @@ button > label {
 #right-answer {
     background-color: green;
 }
+
+#hot-seat-label {
+    font-weight: 700;
+    font-size: large;
+}
